--- a/app/src/main/res/layout/fragment_gadgets.xml
+++ b/app/src/main/res/layout/fragment_gadgets.xml
@@ -2,8 +2,7 @@
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -31,12 +30,6 @@
         android:inputType="textCapWords"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
-    <Spinner
-        android:id="@+id/spinner_device_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginBottom="10dp" />
     <EditText
         android:id="@+id/device_model_name"
         android:layout_width="match_parent"
