--- a/app/src/main/res/layout/snippet_top_profile.xml
+++ b/app/src/main/res/layout/snippet_top_profile.xml
@@ -2,68 +2,75 @@
 <merge xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <android.support.constraint.ConstraintLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:orientation="vertical">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:src="@drawable/ic_profile"
+            android:layout_marginTop="5dp"
+            android:layout_height="100dp"
+            android:layout_width="100dp"
+            app:civ_border_color="#e4e4e4"
+            app:civ_border_width="2dp"
+            android:id="@+id/circleImageView"/>
+        <TextView
+            android:id="@+id/labelName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Names:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:id="@+id/names"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="25dp"
-            tools:layout_editor_absoluteY="26dp" />
+            android:text="Mutangana"
+            android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:id="@+id/labelEmail"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:text="TextView"
-            app:layout_constraintLeft_toLeftOf="parent"
-            tools:layout_editor_absoluteY="79dp" />
+            android:text="E-mail:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:id="@+id/email"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="173dp"
-            tools:layout_editor_absoluteY="26dp" />
+            android:text="mutanganaregis@gmail.com"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/labelPhone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Phone:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+            android:id="@+id/phone"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="173dp"
-            tools:layout_editor_absoluteY="79dp" />
+            android:text="0722505706"
+            android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
+            android:id="@+id/labelAddress"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="24dp"
-            android:layout_marginTop="32dp"
-            android:text="TextView"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Address:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
         <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
+            android:id="@+id/address"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="302dp"
-            tools:layout_editor_absoluteY="89dp" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="173dp"
-            tools:layout_editor_absoluteY="153dp" />
-    </android.support.constraint.ConstraintLayout>
+            android:text="Kicukiro"
+            android:textStyle="bold"/>
+    </LinearLayout>
 </merge>
