--- a/app/src/main/res/layout/snippet_top_profilebar.xml
+++ b/app/src/main/res/layout/snippet_top_profilebar.xml
@@ -16,7 +16,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="Mucyo Miller"
+                    android:text="Profile"
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:layout_marginStart="15dp"
