--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/profileMenu"
-        android:title="profileMenu">
+    <item android:id="@+id/logout"
+        android:icon="@drawable/ic_lock"
+        android:title="logout">
     </item>
 </menu>
