--- a/app/src/main/res/layout/fragment_gadgets.xml
+++ b/app/src/main/res/layout/fragment_gadgets.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical"
     android:background="@color/primary_dark"
@@ -16,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:padding="10dp"
-        android:layout_marginBottom="10dp" />
+        android:padding="5dp"
+        android:layout_marginBottom="5dp" />
     <EditText
         android:id="@+id/device_name"
         android:layout_width="match_parent"
@@ -30,6 +27,11 @@
         android:inputType="textCapWords"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
+    <Spinner
+        android:id="@+id/spinner_device_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"/>
     <EditText
         android:id="@+id/device_model_name"
         android:layout_width="match_parent"
@@ -37,7 +39,7 @@
         android:layout_marginBottom="10dp"
         android:background="@color/primary"
         android:hint="@string/hint_device_model_name"
-        android:inputType="number"
+        android:inputType="textCapWords"
         android:padding="8dp"
         android:singleLine="true"
         android:textColor="@color/white"
@@ -49,7 +51,7 @@
         android:layout_marginBottom="10dp"
         android:background="@color/primary"
         android:hint="@string/hint_device_serial_number"
-        android:inputType="number"
+        android:inputType="textCapWords"
         android:padding="8dp"
         android:singleLine="true"
         android:textColor="@color/white"
@@ -99,4 +101,3 @@
         android:text="@string/btn_report_lost"
         android:textColor="@color/white" />
 </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
