--- a/app/src/main/res/layout/activity_found.xml
+++ b/app/src/main/res/layout/activity_found.xml
@@ -8,7 +8,26 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/layout_bottom_navigation_view"/>
-    </RelativeLayout>
+        <!--top toolbar -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/relLayout1">
+            <include layout="@layout/layout_top_tabs"/>
+        </RelativeLayout>
 
+        <!-- body -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/relLayout2"
+            android:layout_below="@id/relLayout1">
+
+            <include layout="@layout/layout_center_viewpager"/>
+
+        </RelativeLayout>
+        <!-- bottomNavigationView-->
+        <include layout="@layout/layout_bottom_navigation_view"/>
+
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
