add ugly cardView :)

--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,5 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    <!-- A CardView that contains a TextView -->
+<android:android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view"
+    android:layout_gravity="top"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:longClickable="true"
+    android:orientation="vertical"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp"
+    card_view:contentPadding="10dp"
+    layout_width="match_parent"
+    layout_height="wrap_content">
+<TextView
+    android:id="@+id/card_idnumber"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:textColor="#FF4444"
+    android:textSize="24sp"
+    android:text="1199480070850176"
+    />
+<TextView
+    android:id="@+id/card_owner"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/card_idnumber"
+    android:text="Mutangana Regis"
+    />
+<TextView
+    android:id="@+id/card_location"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/card_owner"
+    android:textColor="#33B5E5"
+    android:gravity="end"
+    android:text="Kicukiro"
+    />
 
-</FrameLayout>
+</android:android.support.v7.widget.CardView>
