first milestone towards 1.0

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,24 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:weightSum="1">
+        <TextView
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:text="@string/lost_something"
+            android:textSize="18sp"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:text="@string/found_something"
+            android:textSize="18sp"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
         <ImageView
             android:src="@drawable/web_hi_res_512"
             android:scaleType="centerCrop"
