--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings">
+    </item>
     <item android:id="@+id/logout"
         android:icon="@drawable/ic_lock"
-        android:title="logout">
+        android:title="@string/logout">
     </item>
 </menu>
