--- a/app/src/main/res/layout/activity_found.xml
+++ b/app/src/main/res/layout/activity_found.xml
@@ -15,12 +15,12 @@
             android:id="@+id/relLayout1">
             <include layout="@layout/layout_top_tabs"/>
         </RelativeLayout>
-
         <!-- body -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/relLayout2"
+            android:layout_marginBottom="50dp"
             android:layout_below="@id/relLayout1">
 
             <include layout="@layout/layout_center_viewpager"/>
@@ -28,6 +28,5 @@
         </RelativeLayout>
         <!-- bottomNavigationView-->
         <include layout="@layout/layout_bottom_navigation_view"/>
-
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
