--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/relLayout2"
+                android:layout_marginBottom="50dp"
                 android:layout_below="@id/relLayout1">
 
                 <include layout="@layout/layout_center_viewpager"/>
