--- a/app/src/main/res/layout/fragment_found_cards.xml
+++ b/app/src/main/res/layout/fragment_found_cards.xml
@@ -2,12 +2,12 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical"
     android:background="@color/primary_dark"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp" >
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/foundcardsrec"
         android:layout_width="match_parent"
