--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/menu_logout"
-        android:title="Logout" />
+        android:title="@string/logout" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
