add some improvements

--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -10,6 +10,7 @@
     android:paddingRight="20dp" >
     <Spinner
         android:id="@+id/spinner_report"
+        android:entries="@array/reports"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
