--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,38 +11,42 @@
 
         <!-- Theme for all Alert Dialogs (e.g. from DialogPreference) -->
         <item name="alertDialogTheme">@style/AppAlertDialog</item>
-</style>
+    </style>
 
     <!-- Custom Preference Theme inherits from the v14 support library Material Theme -->
-<style name="AppPreferenceTheme" parent="@style/PreferenceThemeOverlay.v14.Material">
-<item name="preferenceFragmentCompatStyle">@style/AppPreferenceFragmentCompatStyle</item>
-</style>
+    <style name="AppPreferenceTheme" parent="@style/PreferenceThemeOverlay.v14.Material">
+        <item name="preferenceFragmentCompatStyle">@style/AppPreferenceFragmentCompatStyle</item>
+    </style>
 
     <!-- Custom Style for PreferenceFragmentCompat -->
-<style name="AppPreferenceFragmentCompatStyle" parent="@style/PreferenceFragment.Material">
-<!-- Custom layout for PreferenceFragmentCompat -->
-<item name="android:layout">@layout/pref_screen</item>
-</style>
+    <style name="AppPreferenceFragmentCompatStyle" parent="@style/PreferenceFragment.Material">
+        <!-- Custom layout for PreferenceFragmentCompat -->
+        <item name="android:layout">@layout/pref_screen</item>
+    </style>
 
     <!-- Style for a custom Preference Entry -->
-<style name="AppPreference">
-<item name="android:layout">@layout/preference_material</item>
-</style>
+    <style name="AppPreference">
+        <item name="android:layout">@layout/preference_material</item>
+    </style>
 
     <!-- Style for a DialogPreference Entry -->
-<style name="AppPreference.DialogPreference">
-<item name="positiveButtonText">@android:string/ok</item>
-<item name="negativeButtonText">@android:string/cancel</item>
-</style>
+    <style name="AppPreference.DialogPreference">
+        <item name="positiveButtonText">@android:string/ok</item>
+        <item name="negativeButtonText">@android:string/cancel</item>
+    </style>
 
-<style name="AppAlertDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert">
-<!-- To tint the buttons -->
-<item name="colorAccent">@color/accent</item>
-</style>
+    <style name="AppAlertDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <!-- To tint the buttons -->
+        <item name="colorAccent">@color/accent</item>
+    </style>
 
-<style name="AppAlertDialogContent" parent="Theme.AppCompat.DayNight">
-<!-- To tint EditText and TimePicker -->
-<item name="colorAccent">@color/accent</item>
-</style>
+    <style name="AppAlertDialogContent" parent="Theme.AppCompat.DayNight">
+        <!-- To tint EditText and TimePicker -->
+        <item name="colorAccent">@color/accent</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
