--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,12 +34,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <ImageView
-            android:src="@drawable/web_hi_res_512"
-            android:scaleType="centerCrop"
+            android:src="@drawable/lost-found-banner"
+            android:scaleType="centerInside"
             android:layout_gravity="center"
-            android:padding="5dp"
+            android:padding="2dp"
             android:layout_height="152dp"
-            android:layout_width="151dp" />
+            android:layout_width="match_parent" />
 
         <EditText
             android:id="@+id/username"
