--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -16,6 +16,13 @@
         android:layout_marginTop="20dp"
         android:padding="10dp"
         android:layout_marginBottom="10dp" />
+    <Spinner
+        android:id="@+id/spinner_cardtypes"
+        android:entries="@array/cardstypes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp" />
     <EditText
         android:id="@+id/owner_name"
         android:layout_width="match_parent"
